Basic error handling, add company collection
