# controllers/personnel.js
@@ -4,7 +4,10 @@ const ObjectId = require("mongodb").ObjectId
 const getAll = async (req, res) => {
     //#swagger.tags=['Personnel']
     const result = await mongodb.getDb().db("cse341-armymen").collection("personnel").find()
-    result.toArray().then((personnel) => {
+    result.toArray().then((personnel, err) => {
+        if (err) {
+            res.status(400).json({message: err})
+        }
         res.setHeader('Content-Type', 'application/json')
         res.status(200).json(personnel)
     })
@@ -17,15 +20,18 @@ const getSingle = async (req, res) => {
     }
     const personnelId = new ObjectId(req.params.id)
     const result = await mongodb.getDb().db("cse341-armymen").collection("personnel").find({_id: personnelId})
-    result.toArray().then((personnel) => {
+    result.toArray().then((personnel, err) => {
+        if (err) {
+            res.status(400).json({message: err})
+        }
         res.setHeader('Content-Type', 'application/json')
         res.status(200).json(personnel)
     })
 }
 
 const addPersonnel = async (req, res) => {
-    //#swagger.tags=['Users']
-    const user = {
+    //#swagger.tags=['Personnel']
+    const personnel = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
         email: req.body.email,
@@ -34,18 +40,18 @@ const addPersonnel = async (req, res) => {
         company: req.body.company,
         dateOfDeployment: req.body.dateOfDeployment
     }
-    const response = await mongodb.getDb().db('cse341-armymen').collection('personnel').insertOne(user)
+    const response = await mongodb.getDb().db('cse341-armymen').collection('personnel').insertOne(personnel)
     if (response.acknowledged) {
         res.status(204).send()
     } else {
-        res.status(500).json(response.error || 'Some error ocurred while updating the user.')
+        res.status(500).json(response.error || 'Some error ocurred while updating the personnel.')
     }
 }
 
 const updatePersonnel = async (req, res) => {
-    //#swagger.tags=['Users']
+    //#swagger.tags=['Personnel']
     if (!ObjectId.isValid(req.params.id)) {
-        res.status(400).json('Must use a valid contact id to find a contact.')
+        res.status(400).json('Must use a valid personnel id to find specific personnel.')
     }
     const personnelId = new ObjectId(req.params.id)
     const personnel = {
@@ -61,12 +67,12 @@ const updatePersonnel = async (req, res) => {
     if (response.modifiedCount > 0) {
         res.status(204).send()
     } else {
-        res.status(500).json(response.error || 'Some error ocurred while updating the user.')
+        res.status(500).json(response.error || 'Some error ocurred while updating the personnel.')
     }
 }
 
 const deletePersonnel = async (req, res) => {
-    //#swagger.tags=['Users']
+    //#swagger.tags=['Personnel']
     if (!ObjectId.isValid(req.params.id)) {
         res.status(400).json('Must use a valid contact id to find a contact.')
     }
@@ -75,7 +81,7 @@ const deletePersonnel = async (req, res) => {
     if (response.deletedCount > 0) {
         res.status(204).send()
     } else {
-        res.status(500).json(response.error || 'Some error ocurred while updating the user.')
+        res.status(500).json(response.error || 'Some error ocurred while updating the personnel.')
     }
 }
 
